# voxelDVC

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: README.md
assets/GT_z+0.01/: U.npy
assets/GT_z-0.05/: U.npy  def.npy  ref.npy
docs/: STENCIL.md  TUTORIAL.md  make_figures.py
src/voxeldvc/: _format.py  cli.py  compute_residuals.py  crop_numpy_array.py  dvc_defaults.py  mhd_to_npy.py  preprocess.py  run_dvc.py  run_ground_truth_pipeline.py  view_deformed.py  view_displacements.py  view_overlay_initial.py  view_reference.py  vtk_export.py
src/voxeldvc/engine/: __init__.py  correlate_gpu.py  geometry_dvc.py  kernels_dvc.py  write_output.py
src/voxeldvc/ground_truth/: analyse_ground_truth.py  prepare_ground_truth.py  sweep_ground_truth.py  view_displacements_gt_compare.py
tests/: test_dvc_gpu_multiscale.py
